--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,17 @@ $base-color: #171822;
 $grey-color: #7B7F9E;
 $beige-color: #F1F3F6;
 $yellow-color: #FFAC30;
+$darkblue-color:  #3A4276;
 
 
 
 * {
   margin: 0;
   padding: 0;
+}
+
+.m0 {
+  margin: 0;
 }
 
 .p10 {
