--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 $base-color: #171822;
-$grey-color: #7B7F9E;
+$grey-color: #969CBA;
 $beige-color: #F1F3F6;
 $yellow-color: #FFAC30;
 $darkblue-color:  #3A4276;
@@ -12,7 +12,11 @@ $darkblue-color:  #3A4276;
 }
 
 .m0 {
-  margin: 0;
+  margin: 0 !important;
+}
+
+.p0 {
+  padding: 0 !important;
 }
 
 .p10 {
