--- a/src/app/company-dashboard/hall-layout/hall-layout.component.html
+++ b/src/app/company-dashboard/hall-layout/hall-layout.component.html
@@ -1,1 +1,45 @@
-<p>hall-layout works!</p>
+<div class="container-fluid hall-container" id="hall-container">
+  <ul class="row no-gutters">
+    <li class="col-lg-4 col-md-6 table-info-li" *ngFor="let item of items">
+      <div class="table-info__padding-container">
+        <div class="d-flex table-info-div">
+          <div class="table-info__icon table-info__icon-people"><i class="material-icons">group</i></div>
+          <div class="table-info__text">{{item.personNumber}} человека</div>
+        </div>
+        <div class="d-flex table-info-div">
+          <div class="table-info__icon table-info__icon-alarm"><i class="material-icons">access_alarm</i></div>
+          <div class="table-info__text">{{item.checkinTime}}</div>
+        </div>
+        <div class="d-flex table-info-div">
+          <div class="table-info__icon table-info__icon-timer"><i class="material-icons">watch_later</i></div>
+          <div class="table-info__text">{{item.deadline}}</div>
+        </div>
+        <div class="d-flex table-info-div">
+          <div class="table-info__icon table-info__icon-phone"><i class="material-icons">phone</i></div>
+          <div class="table-info__text">{{item.phoneNumber}}</div>
+        </div>
+        <div class="d-flex table-info-div">
+          <div class="table-info__icon table-info__icon-person"><i class="material-icons">account_circle</i></div>
+          <div class="table-info__text">{{item.booker}}</div>
+        </div>    
+        <div class="d-flex table-info-div justify-content-between">
+          <div class="d-flex">
+            <div class="table-info__icon table-info__icon-comment"><i class="material-icons">comment</i></div>
+            <div class="table-info__text">Комментарий</div>
+          </div>
+          <div>
+            <div class="table-info__icon table-info__icon-comment">
+              <button (click)="showComment($event, item.id)">
+                <i *ngIf="!item.isCommentOpen" class="material-icons">arrow_drop_down</i>
+                <i *ngIf="item.isCommentOpen" class="material-icons">arrow_drop_up</i>
+              </button>
+            </div>
+          </div>
+        </div>  
+        <div *ngIf="item.isCommentOpen" class="table-comment-dropdown__div">
+          <textarea class="table-comment-dropdown__textarea" id="comment-area">{{item.comment}}</textarea>
+        </div> 
+      </div>
+    </li>
+  </ul>
+</div>
